Fixed non-blocking getch issue